--- a/index.html
+++ b/index.html
@@ -265,8 +265,9 @@
                 • Facilitated meetings with client to gather information about their current system and process, understand and document their future system goals, and receive feedback in order to make continuous improvements <br />
                 • Utilized Unified Modeling Language (UML) tools such as Activity Diagrams, Use Cases, User Stories, and Data Models to document the business process, and assist in future development stages of the SDLC <br />
                 • Designed and created a responsive user interface using HTML5/CSS, Bootstrap, JavaScript, and ASP.NET <br />
-
-                <br /><br />
+                <br />
+                <img id="inspiroGif" src="pics/inspiro.gif" />
+                <br /><br /><br />
                 <div class="experienceTitle">
                     DLL Financial Solutions – Wayne, PA       <br />
                     Summer 2019, Information Technology Intern  <br />
@@ -275,6 +276,9 @@
                 • Analyzed data in RemedyForce to find ways to conserve time and resources for the company<br />
                 • Discovered design and user interface issues and devised a plan to create impactful changes<br />
                 • Collaborated with other interns to present the findings and solutions to higher-ups in the company<br />
+                <img id="inspiroGif" src="pics/MoonShot.PNG" />
+                <br />
+                <div class="bold">     Takeaway: At DLL, I was able to practice the art of thinking innovatively. My manager encourged the idea of a concept called 'Moonshot Thinking', which was a radical problem-solving approach, that urged for out-of-the-box solutions and new perspectives. Combining my technical skills with this problem-solving method, I was able to think from a new perspective and create unique and impactful solutions to problems I discovered through data analysis. </div>
             </div>
 
 
