--- a/index.html
+++ b/index.html
@@ -191,7 +191,33 @@
                 User Experience Design <br />
                 Smart Sensing & Devices <br />
             </div>
-        </div>
+            <br /><br />
+            <div class="iconTitle">
+                <i class="fas fa-smile"></i>
+
+                <br /> <div class="subTitle"> Things I Enjoy</div> </div>
+            <br /><br />
+                <div id="enjoy"> 
+                    Coffee
+                    <br />
+                    Exploring new restaraunts in Philly
+                    <br />
+                    Music 
+                    <br />
+                    Card Games
+                    <br /> 
+                    Casually browsing Zillow
+                    <br />
+                    Flying
+                    <br /> 
+                    Insisting that Central Jersey exists 
+
+
+                    
+
+                    </div>
+             
+            </div>
         <div id="projects">
 
             <div class="heading">  Projects</div>
